--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "mongoose": "^4.6.5",
     "morgan": "^1.7.0",
     "sinon": "^1.17.6",
-    "sinon-mongoose": "^1.3.0"
+    "sinon-mongoose": "^1.3.0",
+    "babel":"6.23.0",
+    "babel-cli":"6.26.0"
   },
   "devDependencies": {
     "babel-core": "^6.18.0",
