--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "morgan": "^1.7.0",
     "sinon": "^1.17.6",
     "sinon-mongoose": "^1.3.0",
-    "babel-core":"^6.18.0",
+    "babel-core":"6.26.3",
     "babel-cli":"6.26.0"
   },
   "devDependencies": {
