--- a/package.json
+++ b/package.json
@@ -19,12 +19,11 @@
     "mongoose": "^4.6.5",
     "morgan": "^1.7.0",
     "sinon": "^1.17.6",
-    "sinon-mongoose": "^1.3.0",
-    "@babel/core":"7.1.6",
-    "babel-cli":"6.26.0"
+    "sinon-mongoose": "^1.3.0"
   },
   "devDependencies": {
     "babel-core": "^6.18.0",
+    "babel-loader":"8.0.4",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.18.0"
   }
