--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "sinon-mongoose": "^1.3.0"
   },
   "devDependencies": {
-    "@babel/core":"^7.0.0",
-    "babel-loader":"8.0.4",
+    "babel-core": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.18.0"
   }
