--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "babel-node app.js",
     "test_win": "set NODE_ENV=test && mocha test --compilers js:babel-core/register '/**/*.spec.js'",
-    "test": "export NODE_ENV=test && mocha test --compilers js:babel-core/register'/**/*.spec.js'"
+    "test": "export NODE_ENV=test && mocha test --compilers js:babel-core/register '/test/**/*.spec.js'"
   },
   "author": "Leonan Luppi <SON>",
   "license": "ISC",
